Fixed inline-block elements spacing

--- a/assets/scss/elements/_base.scss
+++ b/assets/scss/elements/_base.scss
@@ -1,8 +1,9 @@
 // Elements
 
 .panelbar-element {
-  display: inline-block;
-  color: #fff;
+  display:      inline-block;
+  margin-right: -4px;
+  color:        #fff;
 
   > a,
   > span {
